--- a/index.html
+++ b/index.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Proyecto 01</title>
-</head>
-<body>
-	<h1>prueba</h1>
+<title>Proyecto DAW</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.mySlides {display:none; min-height: 500px;}
+</style>
+<body style="background-image: url(fondo.jpg);">
+  <center>
+<div style="margin-top: 7%; box-shadow: 0px 0px 17px 0px; width: 60%; ">
+  <div class="w3-content w3-display-container">
+    <img class="mySlides" src="nombres.png" style="width:100%">
+    <img class="mySlides" src="login.png" style="width:100%">
+    <img class="mySlides" src="validacion.png" style="width:100%">
+    <img class="mySlides" src="1.png" style="width:100%">
+    <img class="mySlides" src="2.png" style="width:100%">
+    <img class="mySlides" src="3.png" style="width:100%">
+    <img class="mySlides" src="5.png" style="width:100%">
+
+    <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+    <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+  </div>
+</div>
+</center>
+
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";  
+  }
+  x[slideIndex-1].style.display = "block";  
+}
+</script>
+
 </body>
 </html>
