--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <center>
 <div style="margin-top: 7%; box-shadow: 0px 0px 17px 0px; width: 60%; ">
   <div class="w3-content w3-display-container">
-    <img class="mySlides" src="img/nombres.PNG" style="width:100%">
-    <img class="mySlides" src="img/login.PNG" style="width:100%">
+    <img class="mySlides" src="img/nombres.PNG.png" style="width:100%">
+    <img class="mySlides" src="img/login.PNG.png" style="width:100%">
     <img class="mySlides" src="img/validacion.PNG" style="width:100%">
     <img class="mySlides" src="img/1.png" style="width:100%">
     <img class="mySlides" src="img/2.png" style="width:100%">
