--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img class="mySlides" src="img/1.PNG.png" style="width:100%">
     <img class="mySlides" src="img/2.PNG.png" style="width:100%">
     <img class="mySlides" src="img/3.PNG.png" style="width:100%">
-    <img class="mySlides" src="img/5.PNG.png" style="width:100%">
+    <img class="mySlides" src="img/5.PNG style="width:100%">
 
     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
