--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <center>
 <div style="margin-top: 7%; box-shadow: 0px 0px 17px 0px; width: 60%; ">
   <div class="w3-content w3-display-container">
-    <img class="mySlides" src="img/nombres.PNG.png" style="width:100%">
-    <img class="mySlides" src="img/login.PNG.png" style="width:100%">
-    <img class="mySlides" src="img/validacion.PNG.png" style="width:100%">
-    <img class="mySlides" src="img/1.PNG.png" style="width:100%">
-    <img class="mySlides" src="img/2.PNG.png" style="width:100%">
-    <img class="mySlides" src="img/3.PNG.png" style="width:100%">
-    <img class="mySlides" src="img/5.PNG.png" style="width:100%">
+    <img class="mySlides" src="nombres.PNG.png" style="width:100%">
+    <img class="mySlides" src="login.PNG.png" style="width:100%">
+    <img class="mySlides" src="validacion.PNG.png" style="width:100%">
+    <img class="mySlides" src="1.PNG.png" style="width:100%">
+    <img class="mySlides" src="2.PNG.png" style="width:100%">
+    <img class="mySlides" src="3.PNG.png" style="width:100%">
+    <img class="mySlides" src="5.PNG.png" style="width:100%">
 
     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
